noJira: oppgradere BRReg klient til å bruke ny native klient, og ekte parsing bibliotek
Dette fikser en feil i gammel parsing, hvor hvis "orgnr"-key'en var sist i JSON-objektet så ville man inkludere en "}".

Eksempel fra test;
java.lang.AssertionError:
Expecting ArrayList:
  ["917256276}", "993265845}", "994908782}", "996761495}]"]
to contain only:
  ["917256276", "993265845", "994908782", "996761495"]